--- a/docker-compose-SequentialExecutor.yml
+++ b/docker-compose-SequentialExecutor.yml
@@ -8,7 +8,7 @@ services:
             - POSTGRES_DB=airflow
 
     webserver:
-        image: puckel/docker-airflow:latest
+        build: .
         restart: always
         depends_on:
             - postgres
