--- a/docker-compose-SequentialExecutor.yml
+++ b/docker-compose-SequentialExecutor.yml
@@ -29,3 +29,10 @@ services:
             interval: 30s
             timeout: 30s
             retries: 3
+
+    superset:
+        image: amancevice/superset:latest
+        ports:
+            - "8088:8088"
+               
+            
